# flecsi

config/: project.cmake
examples/03_task_concurrency/: CMakeLists.txt  task_concurrency.cc
flecsi/data/: CMakeLists.txt  data.h  future.h  future_handle.h  storage.h
flecsi/data/common/: registration_wrapper.h
flecsi/data/legion/: future_policy.h
flecsi/data/mpi/: future_policy.h
flecsi/execution/: CMakeLists.txt  context.h
flecsi/execution/legion/: context_policy.h  execution_policy.h  init_args.h  runtime_driver.cc
flecsi/execution/mpi/: context_policy.h
flecsi/execution/test/: future_handle.cc
flecsi/runtime/: CMakeLists.txt  flecsi_runtime_future_handle_policy.h  types.h
flecsi/topology/: CMakeLists.txt  structured_index_space.h  structured_mesh_topology.h
flecsi/topology/test/: structured_mesh_test.cc
flecsi/utils/: hash.h
